Massive code cleaning